<resources>
    <string name="app_name">DailySelfie</string>
    <string name="dailySelfie">Daily Selfie</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="title_activity_dashboard">Dashboard</string>
    <string name="action_settings">Setting</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_camera">Camera</string>
    <string name="title_activity_settings">Settings</string>

    <string name="notification">Notification</string>
    <string name="action_alarm">Alarm</string>


    <string name="addDate">Set Date</string>
    <string name="addTime">Set Time</string>
    <string name="repeatAlarm">Repeat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="filters">Apply Filter</string>
    <string name="action_delete_selected">Delete Selected</string>
    <string name="action_delete_all">Delete All</string>
    <string name="action_download">Download</string>
    <string name="action_apply_filter">Apply Filters</string>
    <string name="action_logout">Logout</string>

    <string-array name="filterList">
        <item>Grayscale</item>
        <item>Invert</item>
        <item>Gaussian</item>
        <item>Chrome</item>
        <item>Glow</item>
    </string-array>
</resources>
