<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dailyselfie.view.ui.AlarmActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/alarmbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <EditText
        android:id="@+id/addDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="10"
        android:inputType="date"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/appBar"
        android:layout_toStartOf="@+id/setAlarm"
        android:layout_marginTop="16dp"
        android:layout_alignEnd="@+id/setAlarm" />

    <Button
        android:id="@+id/addDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@color/colorPrimaryLight"
        android:paddingStart="16dp"
        android:text="@string/addDate"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:typeface="sans"
        android:layout_alignTop="@+id/addDateText"
        android:layout_alignEnd="@+id/addTime"
        android:layout_toEndOf="@+id/setAlarm" />

    <EditText
        android:id="@+id/addTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="10"
        android:inputType="time"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:typeface="sans"
        android:layout_below="@+id/addDateText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_toStartOf="@+id/setAlarm"
        android:layout_alignEnd="@+id/setAlarm" />

    <Button
        android:id="@+id/addTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@color/colorPrimaryLight"
        android:paddingStart="16dp"
        android:text="@string/addTime"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:typeface="sans"
        android:layout_alignTop="@+id/addTimeText"
        android:layout_alignEnd="@+id/repeatAlarm"
        android:layout_toEndOf="@+id/addDateText" />

    <CheckBox
        android:id="@+id/repeatAlarm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="16dp"
        android:paddingLeft="16dp"
        android:text="@string/repeatAlarm"
        android:textSize="24dp"
        android:textStyle="normal|bold"
        android:typeface="sans"
        android:layout_below="@+id/addTimeText"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp" />

    <ToggleButton
        android:id="@+id/setAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@color/colorAccent"
        android:checked="false"
        android:text="New ToggleButton"
        android:textOff="OFF"
        android:textOn="ON"
        android:textSize="24sp"
        android:textStyle="normal"
        android:layout_gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
